# validators/user.validation.js
@@ -2,16 +2,14 @@ import Joi from 'joi';
 import {
   emailRequiredMessage,
   emailValidationMessage,
-  firstNameRequiredMessage,
-  lastNameRequiredMessage,
+  fullNameRequiredMessage,
   passwordRequiredMessage,
   strongPasswordValidationMessage,
 } from '../constants/errorMessages.js';
 import { emailRegex, passwordRegex } from '../constants/regexConstants.js';
 
 export const userValidations = Joi.object({
-  firstName: Joi.string().min(3).max(20).required(firstNameRequiredMessage),
-  lastName: Joi.string().min(3).max(20).required(lastNameRequiredMessage),
+  fullName: Joi.string().min(3).max(40).required(fullNameRequiredMessage),
   email: Joi.string().pattern(new RegExp(emailRegex)).required().messages({
     'string.pattern.base': emailValidationMessage,
     'any.required': emailRequiredMessage,
